--- a/crawls/templates/crawls/index.html
+++ b/crawls/templates/crawls/index.html
@@ -10,7 +10,8 @@
 
     <h2>ABOUT</h2>
     <p>
-    This site crawls AI events
+    AI関連のイベントのまとめサイト。<br>
+    クローラーにより定期的に情報収集。
         <!--span><img src="{%  static "crawls/connpass_logo.png" %}" class="img-fluid connpass_logo"></span-->
     </p>
     <div class="button center-block">
