--- a/crawls/templates/crawls/index.html
+++ b/crawls/templates/crawls/index.html
@@ -1,6 +1,6 @@
 {%  extends "crawls/base.html" %}
 {% load staticfiles %}
-
+{% block title %}EventCrawler{% endblock %}
 {% block content %}
 
     <div class="logo">
