--- a/crawls/static/crawls/css/style.css
+++ b/crawls/static/crawls/css/style.css
@@ -9,11 +9,25 @@ body{
 }
 a{
   color: #7dfcfd;
+  text-decoration: none;
+}
+a:hover{
+  color: #7dfcfd;
+  text-decoration: none;
 }
 p{
   text-align: center;
 }
 
+.pager{
+  overflow: hidden;
+}
+.previous{
+  float:left;
+}
+.next{
+  float: right;
+}
 .table-fixed {
   width: 100%;
 }
@@ -36,6 +50,19 @@ p{
   max-width: 70em;
 }
 
+#bg{
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height: 100%;
+}
+#body{
+  position: absolute;
+  top:0;
+  left:0;
+}
+
 table{
   table-layout: fixed;
 }
@@ -47,17 +74,24 @@ tbody{
   overflow-y: scroll;
   height: 500px;
 }
-.button{
+.button_wrapper{
   text-align: center;
   border: 1px solid #FFF;
   width: 20%;
   margin: 0 auto;
+  background-color: #000;
+  opacity: 1;
 }
 
-a.button-add{
+a.button{
   display: block;
   padding: 7px 0;
   text-align: center;
+}
+
+.button_wrapper:hover{
+ background-color: #1b1e21;
+
 }
 
 .navbar {
