--- a/crawls/templates/crawls/base.html
+++ b/crawls/templates/crawls/base.html
@@ -10,7 +10,10 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-
+<div id="bg">
+    <canvas class="pg-canvas" ></canvas>
+</div>
+<section id="body">
 <nav class="navbar navbar-expand-lg ">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -31,7 +34,9 @@
 </div>
 <script src="{% static 'crawls/js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'crawls/js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'crawls/js/test.js' %}" ></script>
+<script src="{% static 'crawls/js/jquery.particleground.min.js' %}" ></script>
+<script src="{% static 'crawls/js/top.js' %}" ></script>
 {% block extra_js %}{% endblock %}
+</section>
 </body>
 </html>
