--- a/crawls/templates/crawls/base.html
+++ b/crawls/templates/crawls/base.html
@@ -13,6 +13,7 @@
 <div id="bg">
     <canvas class="pg-canvas" ></canvas>
 </div>
+<section id="body">
 <nav class="navbar navbar-expand-lg ">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -36,5 +37,6 @@
 <script src="{% static 'crawls/js/jquery.particleground.min.js' %}" ></script>
 <script src="{% static 'crawls/js/top.js' %}" ></script>
 {% block extra_js %}{% endblock %}
+</section>
 </body>
 </html>
