--- a/crawls/static/crawls/css/style.css
+++ b/crawls/static/crawls/css/style.css
@@ -39,9 +39,8 @@ p{
 
 .button_wrapper{
   text-align: center;
-  opacity: 1;
-  background-color: black;
 }
+
 .container .logo{
   text-align: center;
 }
@@ -64,6 +63,7 @@ p{
   top:0;
   left:0;
   width: 100%;
+  background-color: rgba(0,0,0,0.5);
 }
 
 table{
@@ -95,11 +95,6 @@ a.button{
 .button_wrapper:hover{
  background-color: #1b1e21;
 
-}
-
-.navbar {
-  background-color: #000000;
-  opacity: 0.8;
 }
 
 .navbar .navbar-brand {
