--- a/crawls/static/crawls/css/style.css
+++ b/crawls/static/crawls/css/style.css
@@ -60,9 +60,10 @@ p{
 }
 #body{
   position: absolute;
-  top:0;
+  top:56px;
   left:0;
   width: 100%;
+  height: 100%;
   background-color: rgba(0,0,0,0.5);
 }
 
@@ -102,6 +103,7 @@ a.button{
   top: 0;
   left: 0;
   width: 100%;
+  background-color: rgba(0,0,0,0.8);
 }
 .navbar .navbar-brand {
   color: #7dfcfd;
