--- a/crawls/static/crawls/css/style.css
+++ b/crawls/static/crawls/css/style.css
@@ -6,6 +6,8 @@ h2{
 body{
   background-color: black;
   color: #7dfcfd;
+  height: 100%;
+  width: 100%;
 }
 a{
   color: #7dfcfd;
@@ -32,7 +34,7 @@ p{
   width: 100%;
 }
 .table-fixed tbody{
-  height:500px;
+  height:200px;
   overflow-y:auto;
   width: 100%;
 }
@@ -63,7 +65,6 @@ p{
   top:56px;
   left:0;
   width: 100%;
-  height: 100%;
   background-color: rgba(0,0,0,0.5);
 }
 
