--- a/crawls/templates/crawls/index.html
+++ b/crawls/templates/crawls/index.html
@@ -40,9 +40,9 @@
     <table class="table table-dark table-hover">
         <thead>
         <tr>
-            <th id="th-title">Title</th>
-            <th id="th-address">Address</th>
-            <th id="th-date">Date</th>
+            <th class="col-xs-5" id="th-title">Title</th>
+            <th class="col-xs-5" id="th-address">Address</th>
+            <th class="col-xs-2" id="th-date">Date</th>
         </tr>
         </thead>
         <tbody>
@@ -55,7 +55,7 @@
                 <td id="td-address">
                     {{ crawl.address }}
                 </td>
-                <td id="td-date" style="width:200px">
+                <td id="td-date" style="width:20%">
                     {{ crawl.date }}
                 </td>
 
