--- a/crawls/templates/crawls/base.html
+++ b/crawls/templates/crawls/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{% static 'crawls/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'crawls/css/style.css' %}" />
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'crawls/favicon.ico' %}">
     {% block extra_css %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
 </head>
