--- a/crawls/templates/crawls/index.html
+++ b/crawls/templates/crawls/index.html
@@ -11,7 +11,10 @@
     <h2>ABOUT</h2>
     <p>
     AI関連のイベントのまとめサイト。<br>
-    クローラーにより定期的に情報収集。
+    クローラーにより1時間おきに情報収集。<br>
+
+    EC2でクローラーをcronにより、定期実行し、RDSに保存。
+
     </p>
 
     <h2>{{ month }}月のAIイベント</h2>
