--- a/crawls/templates/crawls/base.html
+++ b/crawls/templates/crawls/base.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'top' %}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'crawls:month' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://github.com/Kyou13">GitHub</a>
@@ -28,7 +28,7 @@
         </ul>
     </div>
 </nav>
-<div class="container">
+<div class="container mt-3">
     {% block content %}
         {{ content }}
     {% endblock %}
